--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <!-- A simple website for  Pike Fraternity at Iowa State University  -->
 <html style="scroll-behavior: smooth;">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>Pi Kappa Alpha Provisional Chapter at ISU</title>
 
         <link rel="shortcut icon" href="https://pikesweb.s3.amazonaws.com/content/20210223024238/Pikes_Favicon_Web%401x-1.png" type="image/x-icon" />
@@ -154,4 +156,8 @@
             </div>
         </div>
     </div>
+    <br />
+    <!-- footer -->
+  
+          
     </body>
