--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                         Matt Knudsen<br />
                         Connor Hollarbush<br />
                         Liam Knight<br />
+                        Cade Gochenour<br />
                         Maxwell Smith<br />
 
                     </p>
