updates to stuff

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="#leadership">Leadership</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://login.omegafi.com/cas/login?apikey=fcccc403546c232424b8b469db077f14&login_apikey=fcccc403546c232424b8b469db077f14&org=pike&third_party=0&service=https%3A%2F%2Fmy.omegafi.com%2Fapps%2Fmyomegafi%2Flogin%2Flogin_post.php%3FUserName%3D%2A%2A%2A%26Password%3D%2A%2A%2A%26apikey%3Dfcccc403546c232424b8b469db077f14%26login_apikey%3Dfcccc403546c232424b8b469db077f14%26org%3Dpike%26third_party%3D0&ra=1">Members</a>
+                        <a class="nav-link" href="linkTree.html">Members</a>
                     </li>
                 </ul>
       
@@ -155,6 +155,15 @@
 
           
             </div>
+
+            <div class="break"><img src="images/PiKappaAlpha.png" /> </div>
+
+            <h2>PKA Links</h2>
+            <a href="">OmegaFi MyPike</a>
+            <a>Instagram</a>
+            <a>Manage Page</a>
         </div>
     </div>
+    <br />
+
     </body>
