--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <!-- Bootstrap helps make the layout -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-        <!-- This is the css file that helps make the website look good -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />        <!-- This is the css file that helps make the website look good -->
         <link rel="stylesheet" type="text/css" href="style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -155,7 +154,10 @@
 
           
             </div>
-
+            <div class="break"><img src="images/PiKappaAlpha.png" /> </div>
+            <div style="text-align: center; width:100%">
+            <small >
+Made by the Pikes at Iowa State</small></div>
         </div>
     </div>
     <br />
